apps/nginx-demo/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
spec:
  rules:
    - host: demo.192.168.250.215.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-demo
                port:
                  number: 80
  tls:
    - hosts:
        - demo.192.168.250.215.nip.io
      secretName: prod-demo-tls
